dfir_rs/tests/compile-fail/surface_use_bad3.stderr
error: expected one of: identifier, `self`, `super`, `crate`, `try`, `*`, curly braces
 --> tests/compile-fail/surface_use_bad3.rs:5:12
  |
5 |         use;
  |            ^
